# ubuntu-ubiquity

./: .bzrignore  .pycheckrc  Changelog  Makefile.am  Makefile.in  Mantiena.tmp.txt  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  debconfcommunicator.py  debconffilter.py  epydoc.tripu  firstboot  firstboot-menu  generate-doc.sh  inittab  installer  netcloner  oem-config  oem-config-dm  oem-config-firstboot  oem-config-menu  oem-config-prepare  oem-config-test  partitioning-test.py  plugin-viewer-gtk.py  run-pychecker  run-ubiquity-test  ubuntu-express  ubuntu-express.diff  wizard.py  wizardstep.py
apport/: source_ubiquity.py  ubiquity.py
autopilot/: README  README.md  autopilot  launch_vis
autopilot/ubiquity-autopilot-runner/: run-ubiquity-test
autopilot/ubiquity_autopilot_tests/: __init__.py  exception.py  testcase.py
autopilot/ubiquity_custom/: test_ubiquity_custom.py
base-config/: oem-config  oem-config.mnu
compat/: apt-install  archdetect  mapdevfs  udpkg
d-i/: Makefile  get-sources  make-keyboard-names  manifest  sources.list  update-changelog  update-control
d-i/lists/: any  armhf  hppa
d-i/patches/: zfs-0.8-support.patch
data/: Makefile.am  ubiquity-kdeui.desktop.in  ubiquity.desktop.in  ubiquity.json
debian/: changelog  clean  control  copyright  dirs  docs  espresso-frontend-cloner.dirs  espresso-frontend-cloner.install  espresso-frontend-gtk.dirs  espresso-frontend-gtk.install  espresso-frontend-kde.dirs  espresso-frontend-kde.install  espresso-guadalinex-artwork.install  espresso-guadalinex-doc.dirs  espresso-guadalinex-doc.install  espresso-ubuntu-artwork.dirs  espresso-ubuntu-artwork.install  espresso-ubuntu-doc.install  espresso.dirs  espresso.install  espresso.install-any  espresso.install-i386  espresso.install-powerpc  espresso.install-sparc  espresso.templates  files  firstboot-menu.templates  firstboot.templates  hw-detect.patch  init  intro-alpha.txt  lintian-override  oem-config-check.templates  oem-config-debconf.install  oem-config-debconf.oem-config-debconf.upstart  oem-config-gtk.install  oem-config-gtk.links  oem-config-gtk.postrm  oem-config-kde.install  oem-config-kde.links  (+61 more)
debian/imported-po/: Makefile  add-contexts  af.po  am.po  ar.po  ast.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  (+57 more)
desktop/: Makefile.am  Makefile.in  espresso-gtkui.desktop  espresso-kdeui.desktop  oem-config-prepare-gtk.desktop.in  oem-config-prepare-kde.desktop  ubiquity-gtkui.desktop  ubiquity-gtkui.desktop.in  ubiquity-kdeui.desktop  ubiquity-kdeui.desktop.in  ubiquity-mythbuntu.desktop.in
doc/: README  frontend.html  frontend.noui.html  frontend.text.html  lib.html  lib.validation.html  oem-config.8  ubiquity.8
espresso/: debconffilter.py  filteredcommand.py  misc.py  parted_server.py  progressposition.py  settings.py  tz.py  validation.py
finish-install.d/: 01oem-config-udeb  07oem-config-user
frontend/: Gnome.py  frontend.py  noui.py  text.py
glade/: liveinstaller.glade  liveinstaller.gladep  messages.po
jenkins/: publish2jenkins  update-jenkins-job
lib/: cairo_extensions.py  debconfcommunicator.py  debconffilter.py  filteredcommand.py  fmisc.py  i18n.py  im_switch.py  misc.py  part.py  settings.py  timezone_map.py  validation.py  wizard.py  zoommap.py
menu/: exit  exit.mnu  exit.templates  passwd  passwd.glade  passwd.mnu  passwd.py  passwd.templates  timezone  timezone.glade  timezone.mnu  timezone.py  timezone.templates
pixmaps/: Makefile.am  Makefile.in
po/: LINGUAS  Makefile.in  Makefile.in.in  POTFILES.in  aa.po  ace.po  af.po  ak.po  am.po  an.po  ar.po  arn.po  as.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ceb.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  de_DE.po  dv.po  el.po  en_AU.po  en_CA.po  (+135 more)
prebaseconfig.d/: 01oem-config-udeb
pygtk/: debconffilter.py  firstbootutils.py  wizard.py  wizardstep.py
scripts/: apt-clone  apt-setup  check-kernels  clock-setup  config.py  console-setup-apply  copy.py  install.py  kbd-chooser-wrapper  localechooser-apply  localechooser-wrapper  migration-assistant  mythbuntu-drivers  mythbuntu-services  netcfg-wrapper  plugininstall.py  simple-plugins  start-ubiquity-dm  summary  tzsetup  tzsetup-wrapper  ubuntuone-keyring-helper  user-setup-encrypted-swap  user-setup-wrapper  zsys-setup
src/: Makefile.am  Makefile.in  e-map.defs  e-map.override
tests/: build  helpers.py  pyflakes.exclude  run  run-frontend  run-gtk  run-pep8  run-pyflakes  test_filteredcommand.py  test_gtkui.py  test_gtkwidgets.py  test_install_misc.py  test_language.py  test_migrationassistant.py  test_misc.py  test_osextras.py  test_timezone.py  test_ubi_partman.py  test_ubi_ubuntuone.py  test_upower.py  test_usersetup.py  test_wireless.py
ubiquity/: Makefile.in  __init__.py  auto_update.py  casper.py  debconfcommunicator.py  debconffilter.py  filteredcommand.py  gconftool.py  gsettings.py  gtkwidgets.py  i18n.py  im_switch.py  install_misc.py  keyboard_detector.py  keyboard_names.py  misc.py  nm.py  osextras.py  parted_server.py  plugin.py  plugin_manager.py  progressposition.py  qtwidgets.py  segmented_bar.py  settings.py  telemetry.py  timezone_map.py  tz.py  upower.py  validation.py  wrap_label.py  zoommap.py
(+794 files in other folders)
